chat-app/chat-app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chat-app
  name: chat-app
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: chat-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
      - image: localhost:5000/chat-app:1.0
        name: chat-app
        ports:
        - containerPort: 8000
        args: ["uvicorn", "app:app", "--host", "0.0.0.0"]
        resources:
          limits:
            nvidia.com/gpu: 1
        imagePullPolicy: Always
      dnsPolicy: ClusterFirst
      restartPolicy: Always
